crates/retiretui/src/commands/tui/snapshots/retiretui__commands__tui__frames__accounts_item_128x32.snap
---
source: crates/retiretui/src/commands/tui/frames.rs
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                              
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                  full.toml ● 
┴──────────┴┴────────┴┴─────────┴┴───────┴╯      ╰──────────────────────────────────────────────────────────────────────────────
╭ Plan ─────────────╮╭ Accounts ────────────────────────────────────────────────────────────╮ ╭ Account ───────────────────────╮
│▏ Accounts       7 ││  Accoun╭ Edit cash ──────────────────────────────────────────────────────╮                              │
│  Income         4 ││▌ cash  │ID                [ cash                                       ] │ID               cash         │
│  Expenses       2 ││  broker│Name              [                                            ] │Name                          │
│  Cliffs         0 ││  fid-40│Type              [ Cash ▾ ]                                     │Type             Cash         │
│  Transfers      1 ││  roth-i│Owner             [ jordan ▾ ]                                   │Owner            jordan       │
│  Conversions    1 ││  rollov│Balance           [ $40,000                                    ] │Balance          $40,000      │
│  Contributions  3 ││  hsa   │Invested          [ Fixed return ▾ ]                             │Invested         Fixed return │
│  Events         1 ││  pensio│Expected return   █─────────────────── [                       ] │Expected return               │
│  People         2 ││        │Locked until      [ Never ▾ ]                                    │Locked until     Never        │
│  Residency      1 ││        │Drain priority    [                                            ] │Drain priority                │
│  Household        ││        │                                                                 │                              │
│  Settings         ││        │                                                                 │                              │
│  Market           ││        │                                                                 │                              │
│                   ││        │                                                                 │                              │
│                   ││        │                                                                 │                              │
│                   ││        │                                                                 │                              │
│                   ││        │                                                                 │                              │
│                   ││        │                                                                 │                              │
│                   ││        │                                                                 │                              │
│                   ││        │                                                                 │                              │
│                   ││        │─────────────────────────────────────────────────────────────────│                              │
│                   ││        │A short unique handle other items refer to this account by.      │                              │
│                   ││        │                                                                 │                              │
│                   ││        │                                                                 │                              │
│                   ││        │─────────────────────────────────────────────────────────────────│                              │
│                   ││  [ + Ad│                                            [ Discard ] [ Apply ]│                              │
╰───────────────────╯╰────────╰─────────────────────────────────────────────────────────────────╯──────────────────────────────╯
 ⇥ next  ⏎ apply  esc close
